--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,1 +1,24 @@
 <h1>Contact</h1>
+
+<div class="form-horizontal form-group form-group-lg row">
+  <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-1 col-md-5 col-md-offset-2" style="margin-bottom:20px;">
+    {{input type="email" value=emailAddress class="form-control" placeholder="Please type your e-mail address." autofocus="autofocus"}}
+  </div>
+  <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-1 col-md-5 col-md-offset-2">
+    {{textarea class="form-control" placeholder="Your message. (At least 5 characters.)" rows="7" value=message}}
+  </div>
+
+</div>
+
+<div class="form-horizontal form-group form-group-lg row">
+
+  <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-1 col-md-5 col-md-offset-2">
+      <button disabled={{isDisabled}} class="btn btn-primary btn-lg btn-block" {{action 'sendMessage'}}>Request invitation</button>
+  </div>
+
+
+</div>
+
+{{#if responseMessage}}
+ <div class="alert alert-success">{{responseMessage}}</div>
+ {{/if}}
