--- a/app/templates/admin/invitations.hbs
+++ b/app/templates/admin/invitations.hbs
@@ -16,3 +16,22 @@
   {{/each}}
   </tbody>
 </table>
+
+<div class="row">
+  {{#each model as |invitation|}}
+  <div class="col-md-4">
+    <div class="panel panel-default library-item">
+      <div class="panel-heading">
+        <h3 class="panel-title">{{invitation.email}}</h3>
+      </div>
+      <div class="panel-body">
+        <p>ID: {{invitation.id}}</p>
+        <p>Email: {{invitation.email}}</p>
+      </div>
+      <div class="panel-footer text-right">
+        <button class="btn btn-danger btn-xs" {{action 'deleteInvitation' invitation}}>Delete</button>
+      </div>
+    </div>
+  </div>
+  {{/each}}
+</div>
