--- a/app/templates/libraries/edit.hbs
+++ b/app/templates/libraries/edit.hbs
@@ -1,6 +1,6 @@
 <h2>Edit Library</h2>
 
-<div class="form-horizontal">
+<!-- <div class="form-horizontal">
   <div class="form-group">
     <label class="col-sm-2 control-label">Name</label>
     <div class="col-sm-10">
@@ -24,4 +24,18 @@
       <button type="submit" class="btn btn-default" {{action 'saveLibrary' model}}>Save changes</button>
     </div>
   </div>
+</div> -->
+
+<div class="row">
+
+  <div class="col-md-6">
+    {{library-item-form item=model buttonLabel='Gem ændringer' action='saveLibrary'}}
+  </div>
+
+  <div class="col-md-4">
+    {{#library-item item=model}}
+      <br/>
+    {{/library-item}}
+  </div>
+
 </div>
