--- a/app/templates/libraries/index.hbs
+++ b/app/templates/libraries/index.hbs
@@ -1,5 +1,5 @@
 <h2>List</h2>
-<div class="row">
+<!-- <div class="row">
   {{#each model as |library|}}
   <div class="col-md-4">
     <div class="panel panel-default library-item">
@@ -13,8 +13,20 @@
       <div class="panel-footer text-right">
         {{#link-to 'libraries.edit' library.id class='btn btn-success btn-xs'}}Edit{{/link-to}}
         <button class="btn btn-danger btn-xs" {{action 'deleteLibrary' library}}>Delete</button>
-      </div> 
+      </div>
     </div>
   </div>
+  {{/each}}
+</div> -->
+
+<h2>List</h2>
+<div class="row">
+  {{#each model as |library|}}
+    <div class="col-md-4">
+      {{#library-item item=library}}
+        {{#link-to 'libraries.edit' library.id class='btn btn-success btn-xs'}}Edit{{/link-to}}
+        <button class="btn btn-danger btn-xs" {{action 'deleteLibrary' library}}>Delete</button>
+      {{/library-item}}
+    </div>
   {{/each}}
 </div>
