starting up authors and books

--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,1 +1,3 @@
 <h1>About</h1>
+<p>This is a Ember app backed by firebase. It is possible to create libraries, authors, books etc</p>
+<p>Also you can edit or delete all records stored in firebase</p>
