--- a/app/templates/admin/contacts.hbs
+++ b/app/templates/admin/contacts.hbs
@@ -11,6 +11,7 @@
       <div class="panel-body">
         <p>ID: {{contacts.id}}</p>
         <p>Email: {{contacts.email}}</p>
+        <p>Message: {{contacts.message}}</p>
       </div>
       <div class="panel-footer text-right">
         <button class="btn btn-danger btn-xs" {{action 'deleteContact' contacts}}>Delete</button>
