--- a/app/templates/navbar.hbs
+++ b/app/templates/navbar.hbs
@@ -14,6 +14,8 @@
       <ul class="nav navbar-nav">
         {{#link-to 'index' tagName="li"}}<a href="">Home</a>{{/link-to}}
         {{#link-to 'libraries' tagName="li"}}<a href="">Libraries</a>{{/link-to}}
+        {{#link-to 'authors' tagName="li"}}<a href="">Authors</a>{{/link-to}}
+        {{#link-to 'books' tagName="li"}}<a href="">Books</a>{{/link-to}}
         {{#link-to 'about' tagName="li"}}<a href="">About</a>{{/link-to}}
         {{#link-to 'contact' tagName="li"}}<a href="">Contact</a>{{/link-to}}
       </ul>
